--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,47 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.southernbox.ripplelayout.widget.RippleLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/white">
+    android:background="@android:color/black">
 
-    <android.support.v4.widget.NestedScrollView
+    <android.support.v7.widget.AppCompatImageView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:scaleType="centerCrop"
+        android:src="@drawable/water" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <android.support.v7.widget.CardView style="@style/CardView.Item">
-
-                <com.southernbox.ripplelayout.widget.RippleLayout
-                    style="@style/ImageView.Item">
-
-                <android.support.v7.widget.AppCompatImageView
-                    style="@style/ImageView.Item"
-                    android:src="@drawable/water" />
-
-                </com.southernbox.ripplelayout.widget.RippleLayout>
-
-
-            </android.support.v7.widget.CardView>
-
-            <android.support.v7.widget.CardView style="@style/CardView.Item">
-
-                <com.southernbox.ripplelayout.widget.RippleLayout
-                    style="@style/ImageView.Item">
-
-                <android.support.v7.widget.AppCompatImageView
-                    style="@style/ImageView.Item"
-                    android:src="@drawable/net" />
-
-                </com.southernbox.ripplelayout.widget.RippleLayout>
-
-            </android.support.v7.widget.CardView>
-
-        </LinearLayout>
-
-    </android.support.v4.widget.NestedScrollView>
-
-</FrameLayout>
+</com.southernbox.ripplelayout.widget.RippleLayout>
