--- a/sample/src/main/res/layout/activity_main.xml
+++ b/sample/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.southernbox.ripplelayout.widget.RippleLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.southernbox.ripplelayout.RippleLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/black">
@@ -10,4 +10,4 @@
         android:scaleType="centerCrop"
         android:src="@drawable/water" />
 
-</com.southernbox.ripplelayout.widget.RippleLayout>
+</com.southernbox.ripplelayout.RippleLayout>
